--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
             android:name=".view.main.MainActivity"
             android:label="@string/title_activity_main">
         </activity>
+        <activity
+            android:name=".view.main.UserActivity"
+            android:label="@string/title_activity_user">
+        </activity>
     </application>
 
 </manifest>
